lab2 styling done

--- a/67250_webdevlabs/boxie-lab2/index.html
+++ b/67250_webdevlabs/boxie-lab2/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="static/style.css">
     <meta name="author" content="Bo Xie">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Your name professional website">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bo Xie</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body  style="font-family: Arial">
-    <header style="color:blue; background:lightblue">
-        <h1>Bo Xie</h1>
+
+<body>
+    <header>
+        <h1 id="webname">Bo Xie</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="views/cv.html">CV</a></li>
-                <li><a href="views/contact.html">Contact Me</a></li>
-                <li><a href="views/fun.html">For fun</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="views/cv.html">CV</a>
+            <a href="views/contact.html">Contact Me</a>
+            <a href="views/fun.html">For fun</a>
         </nav>
     </header>
     <div class="main">
