--- a/67250_webdevlabs/boxie-lab3/index.html
+++ b/67250_webdevlabs/boxie-lab3/index.html
@@ -25,9 +25,9 @@
         </nav>
     </header>
     <div class="main">
-        <h2>Hi, my name is Bo</h2>
+        <h2 id="title">Hi, my name is Bo</h2>
         <div style="width: 300px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-            <img src="../boxie-lab2/static/profile.jpg" alt="Bo" style="width: 100%; height: auto;">
+            <img src="../boxie-lab3/static/profile.jpg" alt="Bo" style="width: 100%; height: auto;">
         </div>
         <p id="intro">I am a student at Carnegie Mellon University studying 
             Information Systems. I am passionate about technology and its 
