--- a/67250_webdevlabs/boxie-lab3/index.html
+++ b/67250_webdevlabs/boxie-lab3/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="./static/script.js" defer></script>
+    <script defer src="./static/script.js"></script>
 </head>
 
 <body>
