--- a/67250_webdevlabs/boxie-lab4/index.html
+++ b/67250_webdevlabs/boxie-lab4/index.html
@@ -27,17 +27,20 @@
     <div class="main">
         <h2 id="title">Hi, my name is Bo</h2>
         <div style="width: 300px; height: 300px; overflow: hidden; display: flex; justify-content: center; align-items: center;">
-            <img src="../boxie-lab3/static/profile.jpg" alt="Bo" style="width: 100%; height: auto;">
+            <img src="../boxie-lab4/static/profile.jpg" alt="Bo" style="width: 100%; height: auto;">
         </div>
-        <p id="intro">I am a student at Carnegie Mellon University studying 
+        <p id="shortIntro">I am a student at CMU studying 
+            Information Systems. Click Read More to see my longer bio.</p>
+
+        <p id="longIntro">I am a student at Carnegie Mellon University studying 
             Information Systems. I am passionate about technology and its 
             applications in business. I am also interested in web development and design. 
             I am excited to learn more about web development in this course.</p>
 
-    </div>  
+    </div> 
     <footer>
-        <p>&copy; 2025 Designed and Coded by Bo Xie</p>
-    </footer>
+        <p id="copyYear"> Designed and Coded by Bo Xie &copy;</p>
+    </footer> 
     
 </body>
 </html>
